plugins {
    id 'java'
}

group 'org.pavel'
version '0.1.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile('javax.persistence:javax.persistence-api:2.2')
    compile('org.apache.commons:commons-lang3:3.11')
    compile('org.springframework:spring-aop:5.2.8.RELEASE')
    testCompile('junit:junit:4.12')
}

test {
    if (!JavaVersion.current().isJava8()) {
        jvmArgs "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED"
    }
}
